fix(): use correct css for dark mode based on theme switcher

--- a/skins/complifi.scss
+++ b/skins/complifi.scss
@@ -9,15 +9,13 @@
   --block-bg: #f5f5f7;
 }
 
-@media (prefers-color-scheme: dark) {
-  .complifi {
-    --primary-color: #4aa1ff;
-    --bg-color: #05142c;
-    --text-color: #cccccc;
-    --link-color: #ffffff;
-    --heading-color: #ffffff;
-    --border-color: #2d3a4e;
-    --header-bg: #0c1b32;
-    --block-bg: #0c1b32;
-  }
+.dark-mode .complifi {
+  --primary-color: #4aa1ff;
+  --bg-color: #05142c;
+  --text-color: #cccccc;
+  --link-color: #ffffff;
+  --heading-color: #ffffff;
+  --border-color: #2d3a4e;
+  --header-bg: #0c1b32;
+  --block-bg: #0c1b32;
 }
